=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.021 - Under Development

=over

=item *

Fixed a bug which caused scheduler problems in upgraded Krang
installs.  Krang::Schedule::Daemon was missing code to reset
REMOTE_USER for each instance.  [Sam]

=item *

Added directory hashing to Krang::Media's XML serialization system.
This allows a single KDS file to contain any number of media files.
The previous limit was 32,000. [Sam]

=item *

Added C<no_parent> option to Krang::ListItem::find(). [Sam]

=item *

Fixed a bug in Krang::ListItem::find() which prevented C<ids_only>
from working. [Sam]

=item *

Added missing indexes to the list tables, providing an impressive
speedup in working on large lists. [Sam]

=item *

Fixed a bug that prevented Krang from installing on very recent MySQL
releases which do not tolerate trailing commas in C<CREATE TABLE>
statements. [Aaron Ross]

=item *

Added the ability to run Krang against a MySQL database on a different
machine.  There is a new configuration parameter, C<DBHost>, and a new
option to C<krang_install>, C<--DBHost>.  [Aaron Ross]

=item *

Fixed Krang::CGI::Publisher to not produce a nav-bar when preview
results in an error. [Sam]

=item *

Fixed Krang::User to not load Krang::Group unless it needs to interact
with groups.  This is needed because Krang::Script now uses
Krang::User to run as the 'system' user.  Loading Krang::Group will
cause Krang to load its element libraries, which isn't always a good
thing to do. [Sam]

=back

=head2 v1.020 - Jun 28, 2004

=over

=item *

Fixed bug in Krang::ElementClass::Date which prevented the default
method from returning the current date. [Sam]

=item *

Upgraded HTML::Template to the latest release, 2.7, to fix a bug where
a stale template could be returned from the cache under unusual
circumstances. [Sam]

=item *

Fixed a bug in the installer which prevented installing using an